Prevent font flickering

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,3 +1,12 @@
+html {  
+  opacity: 0;
+  transition: 100ms ease;
+}
+
+html.wf-active {
+  opacity: 1;
+}
+
 body {
   background-color: $body-bg;
   overflow-x: hidden;
