--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -8,7 +8,7 @@ video {
   max-inline-size: -webkit-fill-available;
 }
 .navigation {
-  min-height: 85px;
+  min-height: 91px;
 
   .nav-item {
     .nav-link:hover,
