--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -2,7 +2,7 @@
 .navigation {
   background-color: transparent;
   padding: 15px 0;
-  transition: 0.15s ease-out;
+  //transition: 0.15s ease-out;
   position: relative;
   z-index: 9999;
   font-family: $font-primary;
